[gd_scene load_steps=6 format=3 uid="uid://btig22osf1onp"]

[ext_resource type="Script" path="res://scenes/viewport_management.gd" id="1_oukxq"]
[ext_resource type="PackedScene" uid="uid://pknwhm1v0qh3" path="res://scenes/overworld/gui/pause_menu.tscn" id="2_lrauu"]
[ext_resource type="Material" uid="uid://dukmvhqtqsqu8" path="res://assets/materials/crt_screen_effect.tres" id="3_b8tx2"]
[ext_resource type="Script" path="res://scenes/cheat_line.gd" id="4_spa3k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ly1xu"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="ViewportManagement" type="Node"]
process_mode = 3
script = ExtResource("1_oukxq")
main_scene = "res://scenes/overworld/rooms/room1.tscn"
pause_scene = ExtResource("2_lrauu")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PixelScene" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PixelScene"]
process_mode = 1
disable_3d = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(1152, 648)
size_2d_override = Vector2i(320, 180)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="ScreenVFX" type="ColorRect" parent="."]
material = ExtResource("3_b8tx2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HiResGUIRoot" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CheatLine" type="LineEdit" parent="HiResGUIRoot"]
layout_mode = 0
offset_left = 671.0
offset_top = 467.0
offset_right = 1271.0
offset_bottom = 515.0
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_ly1xu")
alignment = 1
max_length = 16
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
flat = true
script = ExtResource("4_spa3k")

[node name="TransitionFX" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
